--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+    <script defer src="calculadora.js"></script>
 
 
     <title>Bootstrap - Calculadora</title>
 </head>
 <body>
 
-    <!-- Llamado a Javascript -->
 
-    <script src="calculadora.js"></script>
-
-    
     <div class="container m-3">
 
             <div class="dropdown d-flex justify-content-end">
@@ -43,10 +42,10 @@
                 <button type="submit" class="btn btn-primary">Log In</button>
                 </form>
             </div>
-        <h1 class="m-5 " style="text-wrap: balance;">Calculadora con Bootstrap y JavaScript</h1>
-        <form action="">
-            <div class="row mb-3">
-                <div class="col">
+        <h1 class="m-5 text-center" style="text-wrap: balance;">Calculadora con Bootstrap y JavaScript</h1>
+        <form action="" class="m-5">
+            <div class="row mb-3 justify-content-start">
+                <div class="col d-flex">
                     <div class="dropdown">
                         <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Comidas
@@ -60,7 +59,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col d-flex">
                     <div class="dropdown">
                         <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Bebidas
